[package]
name = "stac-siphon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1.0.91"
stac = { version = "0.3", features = ["jsonschema"] }
clap = { version = "4.0.32", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
