[package]
name = "stac-siphon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0.91"
stac = { version = "0.3", features = ["jsonschema"], git = "https://github.com/gadomski/stac-rs" }
stac-async = { version = "0.3", git = "https://github.com/gadomski/stac-rs" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
